compiler/tests/should-pass/delegation/polymorphism/partlypoly.via
// square brackets
fun f[X, Z](a: int{X}, b: int{bob}, c: out int{Z}) : {Z<-} where (X <: alice, alice ⊓ bob <: Z) {
  out c = a + b;
}

fun main() {
  val x : int = input int from alice;
  val y : int = input int from bob;
  f(x, y, val z);
}

host alice
host bob
