compiler/tests/should-fail/InvalidConstructorCall.via
/* InvalidConstructorCallError */

fun add10(a: int{alice}, b: out Array[int]{bob}) {
    out b = Array[int]{bob}(10) + 10;
}

fun main() {
    val array = Array[int]{alice}(10);
    val a: int{alice} = 0;
    add10(a, val b);
    output a to alice;
}

host alice
host bob
